--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -30,7 +30,7 @@
     	<!-- Top Header Left Section -->
         <div class="col-md-6 col-sm-6 top-header-contact">
         	<ul>
-            	<li><i class="fa  fa-phone"></i>123 1234 8548</li>
+            	<li><i class="fa  fa-phone"></i>03130402555</li>
             	<li><i class="fa   fa-envelope"></i>info@builder&amp;contractors.com</li>
             </ul>
         </div>
